# CPPCalorieTracker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1  run.bat  run.ps1
data/: calories.db
src/: DatabaseManager.cpp  DatabaseManager.h  main.cpp
